chore: mise à jour du design, scroll, loader et responsive

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
   <!-- SEO & theming -->
-  <meta name="description" content="InStories Chat – votre assistant créatif en beauté, art, luxe et design.">
-  <meta name="theme-color" content="#1e3a8a">
+  <meta name="description" content="InStories Chat – votre assistant créatif publicité, art, luxe et design.">
+  <meta name="theme-color" content="#0276f2">
   <!-- Open Graph -->
   <meta property="og:title" content="InStories Chat">
-  <meta property="og:description" content="Assistant conversationnel créatif pour mood-boards, pitches, tendances visuelles.">
+  <meta property="og:description" content="Assistant conversationnel créatif pour pitches, tendances visuelles.">
   <meta property="og:image" content="/assets/og-image.png">
   <meta property="og:type" content="website">
   <!-- Preload assets -->
